v3.8.3
- Added - Basic Widgets SCSS.
- Updated - ...

v3.8.2
- Updated - Archive intro titles escape translated text
- Fixed - Admin class notification non printable characters
- Added - Passed author ID and $defaults for Meta method filter

v3.8.1
- Added - wp_body_open() function hook;
- Added - WeCodeArt::layout() method and changed 'wecodeart()' function to use this method
- Added - Support Class for ANR Captcha plugin.
- Added - Admin Notification system class for handling Notifications.
- Changed - Comments submit input to button.
- Changed - wecodeart/filter/gutenberg/wide_or_full_content to wecodeart/filter/gutenberg/auto_layout

v3.8.0
- Updated - Translation escaping across some files
- Fixed - Customizer empty setting for old 404 page
- Removed - Old structured data class

v3.7.8
- Added - Default Pings List classes ( to remove bullets/padding )
- Added - wecodeart/filter/wrappers/{context} filter for Markup::wrap() function
- Fixed - Pings edit links ( Walker )
- Updated - Better error handling for Markup::wrap() method after

v3.7.7
- Fixed - Comment reply link append form to the clicked reply element
- Fixed - Entry Singular Footer text align
- Fixed - Author box - dont render if no description or title
- Fixed - Added filters to disable author box on single/archive
- Updated - WooCommerce support class improvments ( cart fragments / sidebar rendered ) / Removed Sidebar View
- Changed - Footer - methods to generate and register unlimited columns ( technically ) wrapped with Markup::wrap()
- Changed - Content - methods to generate and register unlimited columns ( technically ) wrapped with Markup::wrap()
- Removed - Footer methods for getting hardcoded views and their templates ( now they are autogenerated )
- Removed - Content methods for getting hardcoded views and their templates ( now they are autogenerated )

v3.7.6
- Fixed - Media image ratio calculator missing args
- Fixed - Static HomePage title on search results