@@ -49,11 +49,11 @@ class Content extends Config {
 				'type' 			=> 'control',
 				'control'  		=> 'select',
 				'section'		=> 'content-layout',
-				'title' 		=> __( 'Grid Type: Product Archive', 'wecodeart' ),
-				'description' 	=> __( 'Choose the type of .container class.', 'wecodeart' ),
+				'title' 		=> esc_html__( 'Grid Type: Product Archive', 'wecodeart' ),
+				'description' 	=> esc_html__( 'Choose the type of .container class.', 'wecodeart' ),
 				'choices'  		=> array(
-					'container' 		=> __( 'Container', 'wecodeart' ),
-					'container-fluid' 	=> __( 'Container Fluid', 'wecodeart' ),
+					'container' 		=> esc_html__( 'Container', 'wecodeart' ),
+					'container-fluid' 	=> esc_html__( 'Container Fluid', 'wecodeart' ),
 				), 
 				'priority' 		=> 15, 
 				'sanitize_callback'    => [ $formatting, 'sanitize_choices' ],
@@ -66,8 +66,8 @@ class Content extends Config {
 				'type'        	=> 'control',
 				'control'  		=> 'wecodeart-sortable',
 				'section'		=> 'content-layout',
-				'title'			=> __( 'Content Modules: Product Archive', 'wecodeart' ),
-				'description'	=> __( 'Enable and reorder Site Inner modules.', 'wecodeart' ),
+				'title'			=> esc_html__( 'Content Modules: Product Archive', 'wecodeart' ),
+				'description'	=> esc_html__( 'Enable and reorder Site Inner modules.', 'wecodeart' ),
 				'priority'		=> 20, 
 				'choices'		=> $c_modules,
 				'active_callback' => [ $callbacks, '_is_woocommerce_archive' ],
@@ -83,11 +83,11 @@ class Content extends Config {
 				'type' 			=> 'control',
 				'control'  		=> 'select',
 				'section'		=> 'content-layout',
-				'title' 		=> __( 'Grid Type: Product Single', 'wecodeart' ),
-				'description' 	=> __( 'Choose the type of .container class.', 'wecodeart' ),
+				'title' 		=> esc_html__( 'Grid Type: Product Single', 'wecodeart' ),
+				'description' 	=> esc_html__( 'Choose the type of .container class.', 'wecodeart' ),
 				'choices'  		=> array(
-					'container' 		=> __( 'Container', 'wecodeart' ),
-					'container-fluid' 	=> __( 'Container Fluid', 'wecodeart' ),
+					'container' 		=> esc_html__( 'Container', 'wecodeart' ),
+					'container-fluid' 	=> esc_html__( 'Container Fluid', 'wecodeart' ),
 				), 
 				'priority' 		=> 15, 
 				'sanitize_callback'    => [ $formatting, 'sanitize_choices' ],
@@ -100,8 +100,8 @@ class Content extends Config {
 				'type'        	=> 'control',
 				'control'  		=> 'wecodeart-sortable',
 				'section'		=> 'content-layout',
-				'title'			=> __( 'Content Modules: Product Single', 'wecodeart' ),
-				'description'	=> __( 'Enable and reorder Site Inner modules.', 'wecodeart' ),
+				'title'			=> esc_html__( 'Content Modules: Product Single', 'wecodeart' ),
+				'description'	=> esc_html__( 'Enable and reorder Site Inner modules.', 'wecodeart' ),
 				'priority'		=> 20, 
 				'choices'		=> $c_modules,
 				'active_callback' => 'is_product',
